--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Trade cryptocurrency peer-to-peer with 500+ payment methods. Buy and sell Bitcoin, Ethereum, USDT instantly with escrow protection. Join millions of users trading crypto worldwide." />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolygon points='13 2 3 14 12 14 11 22 21 10 12 10 13 2'%3E%3C/polygon%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Pexly - The People-Powered Way to Move Money" />
