--- a/client/index.html
+++ b/client/index.html
@@ -119,15 +119,7 @@
     </script>
   </head>
   <body>
-    <div id="root">
-      <!-- Static Skeleton for FCP/LCP -->
-      <div style="background: #000; min-height: 100vh; display: flex; align-items: center; justify-content: center; font-family: sans-serif; color: #fff;">
-        <div style="text-align: center;">
-          <h1 style="font-size: 3rem; margin-bottom: 1rem; background: linear-gradient(to right, #B4F22E, #8BC34A); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Pexly</h1>
-          <p style="color: #888;">The People-Powered Way to Move Money</p>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
