--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Trade cryptocurrency peer-to-peer with 500+ payment methods. Buy and sell Bitcoin, Ethereum, USDT instantly with escrow protection. Join millions of users trading crypto worldwide." />
     
     <link rel="preconnect" href="https://assets.coingecko.com">
+    <link rel="preconnect" href="https://hvpeycnedmzrjshmvgri.supabase.co">
+    <link rel="dns-prefetch" href="https://assets.coingecko.com">
+    <link rel="dns-prefetch" href="https://hvpeycnedmzrjshmvgri.supabase.co">
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
