--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
     </noscript>
     
     <!-- Global JSON-LD Schema -->
-    <script type="application/ld+json" defer>
+    <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@graph": [
