--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,9 @@
     
     <link rel="preconnect" href="https://hvpeycnedmzrjshmvgri.supabase.co">
     <link rel="dns-prefetch" href="https://hvpeycnedmzrjshmvgri.supabase.co">
+    <link rel="modulepreload" href="/src/main.tsx">
+    <link rel="modulepreload" href="/src/App.tsx">
+    <link rel="modulepreload" href="/src/lib/crypto-prices.ts">
     
     <!-- Critical path CSS optimization -->
     <style>
