--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Trade cryptocurrency peer-to-peer with 500+ payment methods. Buy and sell Bitcoin, Ethereum, USDT instantly with escrow protection. Join millions of users trading crypto worldwide." />
     
     <!-- Preconnect hints for external APIs (improves LCP by establishing early connections) -->
-    <link rel="preconnect" href="https://hvpeycnedmzrjshmvgri.supabase.co" crossorigin>
+    <link rel="preconnect" href="https://hvpeycnedmzrjshmvgri.supabase.co" crossorigin="anonymous">
     <link rel="dns-prefetch" href="https://hvpeycnedmzrjshmvgri.supabase.co">
-    <link rel="preconnect" href="https://api.coingecko.com" crossorigin>
+    <link rel="preconnect" href="https://api.coingecko.com" crossorigin="anonymous">
     <link rel="dns-prefetch" href="https://api.coingecko.com">
   
     <!-- Modulepreload only critical entry point (not crypto-prices to avoid blocking) -->
